conclusão da lista de todos, inicio d lista de posts e comentarios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<mat-toolbar color="primary">
+  <span>
+   <button mat-button routerLink="../home"> Todo List </button> <mat-icon aria-hidden="false" aria-label="Example home icon">list</mat-icon>
+  </span>
+  <span class="fill-remaining-space"></span>
+  <button mat-button routerLink="../todos">To-do(s)</button>
+  <button mat-button routerLink="../posts">Posts</button>
+  <button mat-button routerLink="../albuns">Albuns</button>
+
+</mat-toolbar>
 <router-outlet></router-outlet>
