conclusão da lista de posts e comentarios. Inicio da lista de albuns e fotos

--- a/src/app/modules/components/posts/posts.component.html
+++ b/src/app/modules/components/posts/posts.component.html
@@ -1,18 +1,31 @@
 
-<div class="row" *ngFor="let item of postsComents;">
-  <div class="col-md-12">
-    <mat-card>
+<div  layout="row" layout-xs="column" class="container" *ngFor="let item of postsComents;">
+  <div flex="">
+    <mat-card class="example-card">
       <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>{{item.title}}</mat-card-title>
-        <mat-card-subtitle>{{item.userId}}</mat-card-subtitle>
+        <mat-card-subtitle>{{item.users}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <p>
-          {{item.body}}
-        </p>
+        <p>{{item.body}}</p>
+        <mat-accordion>
+          <mat-expansion-panel (opened)="panelOpenState = true"
+                              (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-description>
+                Ver Comentários deste Post
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+              <mat-list-item *ngFor="let coments of item.coments">
+                 <h3 matLine><span class="bold-title">Nome:</span> {{coments.name}} </h3>
+                <p matLine><span class="bold-title">Email:</span> {{coments.email}} </p>
+                <p matLine class="demo-2"><span class="bold-title">Comentário</span> {{coments.body}} </p>
+              </mat-list-item>
+            </mat-nav-list>
+          </mat-expansion-panel>
+        </mat-accordion>
       </mat-card-content>
     </mat-card>
-
   </div>
 </div>
