--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>
-   <button mat-button routerLink="../home"> Todo List </button> <mat-icon aria-hidden="false" aria-label="Example home icon">list</mat-icon>
+   <button mat-button routerLink="../home"> CodeList </button> <mat-icon aria-hidden="false" aria-label="Example home icon">list</mat-icon>
   </span>
   <span class="fill-remaining-space"></span>
   <button mat-button routerLink="../todos">To-do(s)</button>
