--- a/src/app/modules/components/albuns/albuns.component.html
+++ b/src/app/modules/components/albuns/albuns.component.html
@@ -1,23 +1,31 @@
-<!-- <table mat-table [dataSource]="postsListas" style="text-align:left">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> id </th>
-    <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="idUsuario">
+    <th mat-header-cell *matHeaderCellDef> Id Usuario </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
   </ng-container>
 
   <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef> Titulo </th>
+    <th mat-header-cell *matHeaderCellDef> Titulo do Album </th>
     <td mat-cell *matCellDef="let element"> {{element.title}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef class="action"> Ação </th>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Visualizar Album </th>
     <td mat-cell *matCellDef="let element">
-      <a class="send-button" (click)="visualizarComents(element)"><mat-icon>search</mat-icon></a>
+      <a [routerLink]="['/photos', element.idAlbun]">
+        <span class="material-icons">search</span>
+      </a>
     </td>
   </ng-container>
 
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
- -->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
