--- a/src/app/modules/components/albuns/albuns.component.html
+++ b/src/app/modules/components/albuns/albuns.component.html
@@ -1,26 +1,24 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!-- Position Column -->
+
   <ng-container matColumnDef="idUsuario">
     <th mat-header-cell *matHeaderCellDef> Id Usuario </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <td mat-cell *matCellDef="let element"> {{element?.id}} </td>
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Nome </th>
-    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+    <td mat-cell *matCellDef="let element"> {{element?.username}} </td>
   </ng-container>
 
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef> Titulo do Album </th>
-    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    <td mat-cell *matCellDef="let element"> {{element?.title}} </td>
   </ng-container>
 
-  <!-- Symbol Column -->
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Visualizar Album </th>
     <td mat-cell *matCellDef="let element">
-      <a [routerLink]="['/photos', element.idAlbun]">
+      <a [routerLink]="['/photos', element?.idAlbun]">
         <span class="material-icons">search</span>
       </a>
     </td>
