--- a/src/app/modules/components/to-dos/to-dos.component.html
+++ b/src/app/modules/components/to-dos/to-dos.component.html
@@ -1,12 +1,12 @@
 <table mat-table [dataSource]="todosListas" multiTemplateDataRows>
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> id </th>
-    <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element?.id }} </td>
   </ng-container>
 
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef> Titulo </th>
-    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+    <td mat-cell *matCellDef="let element"> {{element?.title}} </td>
   </ng-container>
 
   <ng-container matColumnDef="completed">
