--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,7 @@
   <button mat-button routerLink="../albuns">Albuns</button>
 
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
