--- a/src/app/modules/to-dos/to-dos.component.html
+++ b/src/app/modules/to-dos/to-dos.component.html
@@ -1,51 +1,54 @@
-<table mat-table [dataSource]="todosListas" multiTemplateDataRows>
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> id </th>
-    <td mat-cell *matCellDef="let element"> {{ element?.id }} </td>
-  </ng-container>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+    <table mat-table [dataSource]="todosListas" multiTemplateDataRows  class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let element"> {{ element?.id }} </td>
+      </ng-container>
 
-  <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef> Titulo </th>
-    <td mat-cell *matCellDef="let element"> {{element?.title}} </td>
-  </ng-container>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Titulo </th>
+        <td mat-cell *matCellDef="let element"> {{element?.title}} </td>
+      </ng-container>
 
-  <ng-container matColumnDef="completed">
-    <th mat-header-cell *matHeaderCellDef> Completo </th>
-    <td mat-cell *matCellDef="let element">
-        <div *ngIf="element.completed; else elementoFalse">
-          <span class="material-icons determinado">check_box</span>
-        </div>
-        <ng-template #elementoFalse>
-           <span class="material-icons indeterminado">indeterminate_check_box</span>
-        </ng-template>
-    </td>
-  </ng-container>
+      <ng-container matColumnDef="completed">
+        <th mat-header-cell *matHeaderCellDef> Completo </th>
+        <td mat-cell *matCellDef="let element">
+            <div *ngIf="element.completed; else elementoFalse">
+              <span class="material-icons determinado">check_box</span>
+            </div>
+            <ng-template #elementoFalse>
+              <span class="material-icons indeterminado">indeterminate_check_box</span>
+            </ng-template>
+        </td>
+      </ng-container>
 
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" >
-      <div class="example-element-detail"
-           [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-       <div class="example-element-description">
-          <span class="example-element-description-attribution">
-            <mat-list role="list">
-              <mat-list-item><span class="bold-title">idUsuario:</span> {{ usersListas?.id }} </mat-list-item>
-              <mat-list-item><span class="bold-title">Name:</span> {{ usersListas?.name }} </mat-list-item>
-              <mat-list-item><span class="bold-title">UserName:</span> {{ usersListas?.username }} </mat-list-item>
-              <mat-list-item><span class="bold-title">Email:</span>  {{ usersListas?.email }} </mat-list-item>
-            </mat-list>
-          </span>
-        </div>
-      </div>
-    </td>
-  </ng-container>
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail"
+              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-description">
+               <mat-list role="list">
+                  <mat-list-item><span class="bold-title">idUsuario: </span> {{ usersListas?.id }} </mat-list-item>
+                  <mat-list-item><span class="bold-title">Name: </span> {{ usersListas?.name }} </mat-list-item>
+                  <mat-list-item><span class="bold-title">UserName: </span> {{ usersListas?.username }} </mat-list-item>
+                  <mat-list-item><span class="bold-title">Email: </span>  {{ usersListas?.email }} </mat-list-item>
+                </mat-list>
+            </div>
+          </div>
+        </td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let element; columns: displayedColumns;"
-      class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
-      (click)="montaTabela(element); expandedElement = expandedElement === element ? null : element">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+          class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="montaTabela(element); expandedElement = expandedElement === element ? null : element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
-</table>
+    </table>
+  </div>
+</div>
 
