--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -1,31 +1,33 @@
-
-<div  layout="row" layout-xs="column" class="container" *ngFor="let item of postsComents;">
-  <div flex="">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>{{item?.title}}</mat-card-title>
-        <mat-card-subtitle>{{item?.users}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <p>{{item?.body}}</p>
-        <mat-accordion>
-          <mat-expansion-panel (opened)="panelOpenState = true"
-                              (closed)="panelOpenState = false">
-            <mat-expansion-panel-header>
-              <mat-panel-description>
-                Ver Comentários deste Post
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-            <mat-nav-list>
-              <mat-list-item *ngFor="let coments of item.coments">
-                 <h3 matLine><span class="bold-title">Nome:</span> {{coments?.name}} </h3>
-                <p matLine><span class="bold-title">Email:</span> {{coments?.email}} </p>
-                <p matLine class="demo-2"><span class="bold-title">Comentário</span> {{coments?.body}} </p>
-              </mat-list-item>
-            </mat-nav-list>
-          </mat-expansion-panel>
-        </mat-accordion>
-      </mat-card-content>
-    </mat-card>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <div *ngFor="let item of postsComents;">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{item?.title}}</mat-card-title>
+            <mat-card-subtitle>{{item?.users}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <p>{{item?.body}}</p>
+            <mat-accordion>
+              <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                  <mat-panel-description>
+                    Ver Comentários deste Post
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                <mat-nav-list>
+                  <mat-list-item *ngFor="let coments of item.coments">
+                    <h3 matLine><span class="bold-title">Nome:</span> {{coments?.name}} </h3>
+                    <p matLine><span class="bold-title">Email:</span> {{coments?.email}} </p>
+                    <p matLine class="demo-2"><span class="bold-title">Comentário</span> {{coments?.body}} </p>
+                  </mat-list-item>
+                </mat-nav-list>
+              </mat-expansion-panel>
+            </mat-accordion>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
   </div>
 </div>
